# mtk-rescue

./: .gitignore  README.md  pyproject.toml
mtk_rescue/: __main__.py
mtk_rescue/core/: checks.py  findings.py  log_parser.py  mtk.py  preloader.py  recipes.py  seccfg.py  udev.py  usb.py
mtk_rescue/devices/: begonia.py
mtk_rescue/gui/: app.py  main_window.py
tests/: test_findings.py  test_log_parser.py  test_preloader.py  test_recipes_gpt.py  test_seccfg.py  test_usb.py
